anthos-demo/hello-world/anthos-demo-01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:    
    kubernetes.io/ingress.class: istio
    configmanagement.gke.io/cluster-selector: selector-ship1
spec:
  rules:
  - http:
      paths:
      - path: /greet-the-world        
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 60000
